RESOLVED FIXED296214
AX: frames of SVG roots aren't positioned absolutely
https://bugs.webkit.org/show_bug.cgi?id=296214
Summary AX: frames of SVG roots aren't positioned absolutely
Joshua Hoffman
Reported 2025-07-18 16:29:43 PDT
.
Attachments
Joshua Hoffman
Comment 1 2025-07-18 16:29:48 PDT
Joshua Hoffman
Comment 2 2025-07-18 16:34:47 PDT
EWS
Comment 3 2025-07-19 14:01:36 PDT
Committed 297649@main (3b38ff887b57): <https://commits.webkit.org/297649@main> Reviewed commits have been landed. Closing PR #48276 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.