AX: frames of SVG roots aren't positioned absolutely https://bugs.webkit.org/show_bug.cgi?id=296214 rdar://153782363

Reviewed by Tyler Wilcock.

offsetBoundingBoxForRemoteSVGElement, which adjusts SVG objects so that
their frames are positioned relative to the page (not within their
documents), can be called on objects that are SVG roots themselves. But,
we don't consider the starting object during the ancestor walk in this
method, so those objects would never have their rects adjusted.

* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::offsetBoundingBoxForRemoteSVGElement const):

Canonical link: https://commits.webkit.org/297649@main